--- a/LupsyApp/app/src/main/AndroidManifest.xml
+++ b/LupsyApp/app/src/main/AndroidManifest.xml
@@ -13,17 +13,16 @@
         android:theme="@style/Theme.LupsyApp"
         tools:targetApi="31">
         <activity
-            android:name=".LoginActivity"
-            android:exported="false" />
-        <activity
             android:name=".MainActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+            android:exported="false" />
+        <activity android:name=".LoginActivity"
+            android:exported="true"
+            android:theme="@style/Theme.LupsyApp.NoActionBar">
+        <intent-filter>
+            <action android:name="android.intent.action.MAIN" />
+            <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+    </activity>
     </application>
 
 </manifest>
