isto também faz parte

--- a/LupsyApp/app/src/main/AndroidManifest.xml
+++ b/LupsyApp/app/src/main/AndroidManifest.xml
@@ -13,16 +13,21 @@
         android:theme="@style/Theme.LupsyApp"
         tools:targetApi="31">
         <activity
+            android:name=".BarraInferior"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="false" />
-        <activity android:name=".LoginActivity"
+        <activity
+            android:name=".LoginActivity"
             android:exported="true"
             android:theme="@style/Theme.LupsyApp.NoActionBar">
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
-    </activity>
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
