--- a/LupsyApp/app/src/main/AndroidManifest.xml
+++ b/LupsyApp/app/src/main/AndroidManifest.xml
@@ -13,6 +13,10 @@
         android:theme="@style/Theme.LupsyApp"
         tools:targetApi="31">
         <activity
+            android:name=".CadastroActivity"
+            android:exported="false"
+            android:theme="@style/Theme.LupsyApp.NoActionBar"/>
+        <activity
             android:name=".BarraInferior"
             android:exported="false" />
         <activity
