ignore composer.lock

--- a/.gitignore
+++ b/.gitignore
@@ -286,3 +286,4 @@ hs_err_pid*
 !/gradle/wrapper/gradle-wrapper.jar
 
 # End of https://www.toptal.com/developers/gitignore/api/composer,visualstudiocode,androidstudio,phpstorm,android,yii2
+LupsyWeb/composer.lock
