--- a/LupsyApp/app/src/main/AndroidManifest.xml
+++ b/LupsyApp/app/src/main/AndroidManifest.xml
@@ -12,7 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.LupsyApp"
         tools:targetApi="31">
-
+        <activity
+            android:name=".CervejaDetailsActivity"
+            android:exported="false" />
         <activity
             android:name=".SignUpActivity"
             android:exported="false"
