--- a/LupsyApp/app/src/main/AndroidManifest.xml
+++ b/LupsyApp/app/src/main/AndroidManifest.xml
@@ -6,19 +6,23 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:usesCleartextTraffic="true"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
+        android:label="@string/app_name"
         android:theme="@style/Theme.LupsyApp"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name=".CervejaDetailsActivity"
+            android:name=".CervejaDetailsActivityADM"
             android:exported="false" />
+        <activity
+            android:name=".CervejaDetailsActivity"
+            android:exported="false"
+            android:launchMode="singleTop" />
         <activity
             android:name=".SignUpActivity"
             android:exported="false"
