pdf na fatura web

--- a/LupsyWeb/composer.json
+++ b/LupsyWeb/composer.json
@@ -20,7 +20,8 @@
         "yiisoft/yii2-symfonymailer": "~2.0.3",
         "hail812/yii2-adminlte3": "~1.1",
         "bower-asset/admin-lte": "*",
-        "php-mqtt/client": "^1.8"
+        "php-mqtt/client": "^1.8",
+        "mpdf/mpdf": "^8.2"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
